# ChangeLog for app-i18n/scim-qtimm
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/scim-qtimm/ChangeLog,v 1.25 2005/07/08 09:13:24 usata Exp $

*scim-qtimm-0.9.2 (08 Jul 2005)

  08 Jul 2005; Mamoru KOMACHI <usata@gentoo.org>
  -scim-qtimm-0.8.5-r1.ebuild, -scim-qtimm-0.9.0.ebuild,
  scim-qtimm-0.9.1.ebuild, +scim-qtimm-0.9.2.ebuild:
  Version bumped. This closes bug #98321.

  03 Jul 2005; Michael Hanselmann <hansmi@gentoo.org>
  scim-qtimm-0.8.95.ebuild:
  Stable on ppc.

*scim-qtimm-0.9.1 (27 Jun 2005)

  27 Jun 2005; Mamoru KOMACHI <usata@gentoo.org> scim-qtimm-0.8.95.ebuild,
  +scim-qtimm-0.9.1.ebuild:
  Version bumped.

  21 Jun 2005; Simon Stelling <blubb@gentoo.org> scim-qtimm-0.9.0.ebuild:
  added ~amd64 keyword

  17 Jun 2005; Michael Hanselmann <hansmi@gentoo.org>
  scim-qtimm-0.8.9.ebuild:
  Stable on ppc.

*scim-qtimm-0.9.0 (29 May 2005)
*scim-qtimm-0.8.95 (29 May 2005)

  29 May 2005; Mamoru KOMACHI <usata@gentoo.org> scim-qtimm-0.8.9.ebuild,
  +scim-qtimm-0.8.95.ebuild, +scim-qtimm-0.9.0.ebuild:
  Version bumped.

*scim-qtimm-0.8.9 (28 Apr 2005)

  28 Apr 2005; Mamoru KOMACHI <usata@gentoo.org> -scim-qtimm-0.7.5.ebuild,
  -scim-qtimm-0.8.0.ebuild, -scim-qtimm-0.8.5.ebuild,
  +scim-qtimm-0.8.9.ebuild:
  Version bumped.

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  scim-qtimm-0.8.5-r1.ebuild:
  Stable on ppc.

*scim-qtimm-0.8.5-r1 (28 Mar 2005)

  28 Mar 2005; Mamoru KOMACHI <usata@gentoo.org> +scim-qtimm-0.8.5-r1.ebuild:
  Fixed bug #86450.

  22 Mar 2005; Mamoru KOMACHI <usata@gentoo.org> scim-qtimm-0.8.5.ebuild:
  Fixed arts USE flag. Thanks to Mathieu Bonnet <mathieu.bonnet@nalkym.org>;
  bug #86265.

  21 Mar 2005; Mamoru KOMACHI <usata@gentoo.org> scim-qtimm-0.8.5.ebuild:
  Stable on x86.

  08 Mar 2005; Mamoru KOMACHI <usata@gentoo.org> scim-qtimm-0.8.5.ebuild:
  Set $KDEDIR explicitly in the ebuild. See bug #84369.

*scim-qtimm-0.8.5 (05 Mar 2005)
