@@ -1,8 +1,12 @@
-MD5 1c166bcc410e4d6a2cdc08a8c3b7b5e1 ChangeLog 2165
-MD5 e92a48548554c80cf90e18df17ff6a82 metadata.xml 156
-MD5 03768820874e26f052ac2ffbda2f4b86 scim-anthy-0.4.2.ebuild 1066
-MD5 74d3af95c62699e454595b540959e4c3 scim-anthy-0.5.2.ebuild 1024
 MD5 3418e319d2da93ac8ca5468b3b62ef0d scim-anthy-0.4.3.ebuild 1067
+MD5 e92a48548554c80cf90e18df17ff6a82 metadata.xml 156
+MD5 64855f74af04ac9bd945414d39ddc2d5 ChangeLog 2352
+MD5 74d3af95c62699e454595b540959e4c3 scim-anthy-0.5.2.ebuild 1024
+MD5 1ba3d67a4b87f64e5da32e3f49bfc5d1 scim-anthy-0.5.3.ebuild 1024
+MD5 076cee0147e72b0fe8ecfaeed4d9d136 scim-anthy-0.6.0.ebuild 1024
+MD5 03768820874e26f052ac2ffbda2f4b86 scim-anthy-0.4.2.ebuild 1066
 MD5 3f6fbdd8d7fb1233643d6a4b13c14dde files/digest-scim-anthy-0.4.3 68
 MD5 ab9fd3efe440fc2beca9651d67ebf25a files/digest-scim-anthy-0.5.2 68
+MD5 e7bf6c6ea71a0dadd1e3373bfeffb8dd files/digest-scim-anthy-0.5.3 68
+MD5 b3721f2aa5b8f9f3616b06ab7c6e71a7 files/digest-scim-anthy-0.6.0 68
 MD5 6640d2a6809b389aa59bbd8ad2f72126 files/digest-scim-anthy-0.4.2 68
