@@ -1,6 +1,13 @@
 # ChangeLog for app-i18n/scim-qtimm
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/scim-qtimm/ChangeLog,v 1.25 2005/07/08 09:13:24 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/scim-qtimm/ChangeLog,v 1.26 2005/07/31 08:48:53 usata Exp $
+
+*scim-qtimm-0.9.3 (31 Jul 2005)
+
+  31 Jul 2005; Mamoru KOMACHI <usata@gentoo.org> -scim-qtimm-0.8.9.ebuild,
+  scim-qtimm-0.8.95.ebuild, scim-qtimm-0.9.1.ebuild,
+  scim-qtimm-0.9.2.ebuild, +scim-qtimm-0.9.3.ebuild:
+  Version bumped. Fixed need-qt; bug #100235.
 
 *scim-qtimm-0.9.2 (08 Jul 2005)
 
